--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,2 @@
-server-port=8888
-spring.application.name=fx-config-server
-spring.cloud.config.server.git.url=https://github.com/manishpriyap/microservices.git
+organization.name=FutureXSkill
+service.welcome.message=hello from FutureXSkill
